--- a/index.html
+++ b/index.html
@@ -1,16 +1,33 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./Styles/style.css">
-    <link rel="stylesheet" href="./Styles/media.css">
-    <link rel="stylesheet" href="./Styles/fontface.css">
-    <title>Document</title>
-</head>
-<body>
+<html lang="fa">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=chrome" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./Styles/main_style.css" />
 
-        <script src="./Scripts/main.js"></script>
-</body>
+    <title>Document</title>
+  </head>
+  <body>
+    <!-- hml Header -->
+    <header>
+        <div class="header__nav__container">
+            <nav class="nav">
+                <div class="nav__icon"></div>
+            </nav>
+        </div>
+        <div class="profilePicture__container">
+            <div class="profilePicture">
+                <img class="profilePicture__img" src="./Pictures/User/UserImage.png" alt="Profile_Picture">
+            </div>
+        </div>
+        <div class="header__background__container">
+
+        </div>
+        <div class="header__border"></div>
+        </header>
+    <script src="./Scripts/main.js"></script>
+  </body>
 </html>
+
+<!-- ---class="background_test" -->
