--- a/index.html
+++ b/index.html
@@ -11,18 +11,26 @@
   <body>
     <!-- hml Header -->
     <header>
-        <div class="header__nav__container">
+        <div class="header__nav_container">
             <nav class="nav">
                 <div class="nav__icon"></div>
             </nav>
         </div>
-        <div class="profilePicture__container">
+        <div class="profilePicture_container">
             <div class="profilePicture">
                 <img class="profilePicture__img" src="./Pictures/User/UserImage.png" alt="Profile_Picture">
             </div>
         </div>
         <div class="header__background__container">
 
+        </div>
+        <div class="header__back_container">
+          <div class="back__box__top">
+            <div class="box__top"></div>
+          </div>
+          <div class="back__box__bottom">
+            <div class="box__bottom"></div>
+          </div>
         </div>
         <div class="header__border"></div>
         </header>
