--- a/index.html
+++ b/index.html
@@ -8,34 +8,43 @@
 
     <title>Document</title>
   </head>
+
   <body>
     <!-- hml Header -->
     <header>
-        <div class="header__nav_container">
-            <nav class="nav">
-                <div class="nav__icon"></div>
-            </nav>
-        </div>
-        <div class="profilePicture_container">
-            <div class="profilePicture">
-                <img class="profilePicture__img" src="./Pictures/User/UserImage.png" alt="Profile_Picture">
+      <nav class="header__nav">
+        <div class="nav_container">
+          <div class="nav__icon_toggle">
+            <div class="icon_toggle_container">
+              <i class="icon_toggle fa pulse"></i>
             </div>
-        </div>
-        <div class="header__background__container">
-
-        </div>
-        <div class="header__back_container">
-          <div class="back__box__top">
-            <div class="box__top"></div>
-          </div>
-          <div class="back__box__bottom">
-            <div class="box__bottom"></div>
           </div>
         </div>
-        <div class="header__border"></div>
-        </header>
+      </nav>
+      <div class="profilePicture_container">
+        <div class="profilePicture__img">
+          <img
+            class="img__container"
+            src="./Pictures/User/UserImage.png"
+            alt="Profile_Picture"
+          />
+        </div>
+      </div>
+      <div class="header__back_container">
+        <div class="back__box__top">
+          <div class="box__top"></div>
+        </div>
+        <div class="back__box__bottom">
+          <div class="box__bottom"></div>
+        </div>
+        <div class="back__border_container">
+          <div class="border__top"></div>
+          <div class="border__left"></div>
+          <div class="border__right"></div>
+          <div class="border__bottom"></div>
+        </div>
+      </div>
+    </header>
     <script src="./Scripts/main.js"></script>
   </body>
 </html>
-
-<!-- ---class="background_test" -->
