--- a/index.html
+++ b/index.html
@@ -13,38 +13,84 @@
     <!-- hml Header -->
     <header>
       <nav class="header__nav">
-        <div class="nav_container">
-          <div class="nav__icon_toggle">
-            <div class="icon_toggle_container">
-              <i class="icon_toggle fa pulse"></i>
-            </div>
+        <div class="nav__icon">
+          <div class="icon_container">
+            <i class="icon_bars fa pulse"></i>
           </div>
         </div>
+        <div class="nav__list">
+          <ul class="list__navlist">
+            <li class="navlist__item">
+              <p class="navlist__item__inner">1</p>
+            </li>
+            <li class="navlist__item">
+              <p class="navlist__item__inner">2</p>
+            </li>
+            <li class="navlist__item">
+              <p class="navlist__item__inner">3</p>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <div class="profilePicture_container">
-        <div class="profilePicture__img">
+      <div class="header__profile">
+        <div class="profile__img">
           <img
-            class="img__container"
+            class="img"
             src="./Pictures/User/UserImage.png"
             alt="Profile_Picture"
           />
         </div>
-      </div>
-      <div class="header__back_container">
-        <div class="back__box__top">
-          <div class="box__top"></div>
+        <div class="profile__name">
+          <div class="name__title">
+            <h1 class="title__inner">User Name</h1>
+          </div>
         </div>
-        <div class="back__box__bottom">
-          <div class="box__bottom"></div>
+        <div class="profile__border rotate"></div>
+      </div>
+      <div class="header__back">
+        <div class="back__box">
+          <div class="box__top__picture"></div>
+          <div class="box__top__gradient"></div>
+          <div class="box__bottom__half"></div>
         </div>
         <div class="back__border_container">
-          <div class="border__top"></div>
-          <div class="border__left"></div>
-          <div class="border__right"></div>
-          <div class="border__bottom"></div>
+          <!-- <div class="border__top"></div> -->
+          <!-- <div class="border__left"></div> -->
+          <!-- <div class="border__right"></div> -->
+          <!-- <div class="border__bottom"></div> -->
         </div>
       </div>
     </header>
+    <!-- hml Main -->
+    <main></main>
+    <!-- hml Footer -->
+    <footer>
+      <div class="footer__about">
+        <div class="about__title">
+          <h3 class="title__inner">About Us</h3>
+        </div>
+        <div class="about__content">
+          <p class="content__inner">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem aspernatur iusto quos quod minima quisquam maxime eligendi.
+          </p>
+        </div>
+      </div>
+      <div class="footer__form">
+        <div class="form__contact">
+          <div class="contact__title">
+            <h3 class="title__inner">Contact Us</h3>
+          </div>
+          <div class="contact_container">
+            <form action="" class="contact__form">
+              <input class="footer__input" type="text" placeholder="Name...">
+              <input  class="footer__input" type="tel" placeholder="Phone...">
+              <input class="footer__input" type="text" placeholder="Message Content...">
+              <input class="footer__button" type="submit" value="Send">
+            </form>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="./Scripts/main.js"></script>
   </body>
 </html>
